--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -6,23 +6,32 @@ on:
       - main
 
 permissions:
+  contents: read
   pages: write
   id-token: write
 
+concurrency:
+  group: "pages"
+  cancel-in-progress: true
+
 jobs:
   deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout Repository
+      - name: Checkout source
         uses: actions/checkout@v3
 
       - name: Setup Pages
         uses: actions/configure-pages@v3
 
-      - name: Upload Static Site
+      - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
         with:
-          path: .  # all files in root directory
+          path: .
 
       - name: Deploy to GitHub Pages
+        id: deployment
         uses: actions/deploy-pages@v2
